# chimeric

./: 404.html  Makefile  README.md  development.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
contributing/: index.html
docs/: index.md
search/: search_index.json
src/chimeric/: __init__.py  base.py  chimeric.py  client.py  exceptions.py  tools.py  types.py  utils.py
src/chimeric/providers/anthropic/: client.py
src/chimeric/providers/aws/: client.py
src/chimeric/providers/cerebras/: __init__.py  client.py
src/chimeric/providers/cohere/: __init__.py  client.py
src/chimeric/providers/google/: client.py
src/chimeric/providers/grok/: client.py
src/chimeric/providers/groq/: client.py
src/chimeric/providers/huggingface/: client.py
src/chimeric/providers/openai/: client.py
src/chimeric/providers/replicate/: client.py
stylesheets/: extra.css
tests/: conftest.py  test_anthropic.py  test_base.py  test_cerebras.py  test_chimeric.py  test_cohere.py  test_google.py  test_grok.py  test_groq.py  test_openai.py  test_tools.py  test_utils.py
tests/integration/: test_provider_anthropic.py  test_provider_cerebras.py  test_provider_cohere.py  test_provider_google.py  test_provider_grok.py  test_provider_groq.py  test_provider_openai.py  vcr_config.py
tests/unit/: test_base.py  test_chimeric.py  test_utils.py
usage/configuration/: index.html
usage/getting-started/: index.html
usage/responses/: index.html
usage/streaming/: index.html
usage/tools/: index.html
